project1pt2/y.output
Terminals unused in grammar

   WS
   DOT
   BR


Grammar

    0 $accept: parse $end

    1 parse: SCRIPTYPE lines SLASHSCRIPT
    2      | SCRIPTYPE lines SLASHSCRIPT NEWLINE

    3 lines: line lines
    4      | /* empty */

    5 line: VAR ID EQUAL exps over
    6     | VAR ID

    7 $@1: /* empty */

    8 line: VAR ID EQUAL $@1 CUROPENBRAC object CURCLOSEBRAC SEMICOLON
    9     | ID EQUAL exps over
   10     | ID

   11 $@2: /* empty */

   12 line: DOCUWRITE $@2 OPENPARENT param CLOSEPARENT over
   13     | NEWLINE

   14 over: SEMICOLON
   15     | NEWLINE

   16 param: exps

   17 $@3: /* empty */

   18 param: exps $@3 COMMA param
   19      | /* empty */

   20 exp2: exp2 TIME exp3
   21     | exp2 DIVIDE exp3
   22     | exp3
   23     | QQUO

   24 exp3: OPENPARENT exps CLOSEPARENT
   25     | NUM
   26     | ID

   27 exps: exps PLUS exp2
   28     | exps MINUS exp2
   29     | exp2

   30 object1: ID COLON exps

   31 object: object1
   32       | object COMMA object1
   33       | object NEWLINE
   34       | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 5 6 8 9 10 26 30
QQUO (259) 23
NUM (260) 25
SCRIPTYPE (261) 1 2
SLASHSCRIPT (262) 1 2
NEWLINE (263) 2 13 15 33
VAR (264) 5 6 8
EQUAL (265) 5 8 9
COLON (266) 30
SEMICOLON (267) 8 14
DOCUWRITE (268) 12
OPENPARENT (269) 12 24
CLOSEPARENT (270) 12 24
COMMA (271) 18 32
WS (272)
DOT (273)
BR (274)
CUROPENBRAC (275) 8
CURCLOSEBRAC (276) 8
PLUS (277) 27
MINUS (278) 28
TIME (279) 20
DIVIDE (280) 21


Nonterminals, with rules where they appear

$accept (26)
    on left: 0
parse (27)
    on left: 1 2, on right: 0
lines (28)
    on left: 3 4, on right: 1 2 3
line (29)
    on left: 5 6 8 9 10 12 13, on right: 3
$@1 (30)
    on left: 7, on right: 8
$@2 (31)
    on left: 11, on right: 12
over (32)
    on left: 14 15, on right: 5 9 12
param (33)
    on left: 16 18 19, on right: 12 18
$@3 (34)
    on left: 17, on right: 18
exp2 (35)
    on left: 20 21 22 23, on right: 20 21 27 28 29
exp3 (36)
    on left: 24 25 26, on right: 20 21 22
exps (37)
    on left: 27 28 29, on right: 5 9 16 18 24 27 28 30
object1 (38)
    on left: 30, on right: 31 32
object (39)
    on left: 31 32 33 34, on right: 8 32 33


state 0

    0 $accept: . parse $end

    SCRIPTYPE  shift, and go to state 1

    parse  go to state 2


state 1

    1 parse: SCRIPTYPE . lines SLASHSCRIPT
    2      | SCRIPTYPE . lines SLASHSCRIPT NEWLINE

    ID         shift, and go to state 3
    NEWLINE    shift, and go to state 4
    VAR        shift, and go to state 5
    DOCUWRITE  shift, and go to state 6

    $default  reduce using rule 4 (lines)

    lines  go to state 7
    line   go to state 8


state 2

    0 $accept: parse . $end

    $end  shift, and go to state 9


state 3

    9 line: ID . EQUAL exps over
   10     | ID .

    EQUAL  shift, and go to state 10

    $default  reduce using rule 10 (line)


state 4

   13 line: NEWLINE .

    $default  reduce using rule 13 (line)


state 5

    5 line: VAR . ID EQUAL exps over
    6     | VAR . ID
    8     | VAR . ID EQUAL $@1 CUROPENBRAC object CURCLOSEBRAC SEMICOLON

    ID  shift, and go to state 11


state 6

   12 line: DOCUWRITE . $@2 OPENPARENT param CLOSEPARENT over

    $default  reduce using rule 11 ($@2)

    $@2  go to state 12


state 7

    1 parse: SCRIPTYPE lines . SLASHSCRIPT
    2      | SCRIPTYPE lines . SLASHSCRIPT NEWLINE

    SLASHSCRIPT  shift, and go to state 13


state 8

    3 lines: line . lines

    ID         shift, and go to state 3
    NEWLINE    shift, and go to state 4
    VAR        shift, and go to state 5
    DOCUWRITE  shift, and go to state 6

    $default  reduce using rule 4 (lines)

    lines  go to state 14
    line   go to state 8


state 9

    0 $accept: parse $end .

    $default  accept


state 10

    9 line: ID EQUAL . exps over

    ID          shift, and go to state 15
    QQUO        shift, and go to state 16
    NUM         shift, and go to state 17
    OPENPARENT  shift, and go to state 18

    exp2  go to state 19
    exp3  go to state 20
    exps  go to state 21


state 11

    5 line: VAR ID . EQUAL exps over
    6     | VAR ID .
    8     | VAR ID . EQUAL $@1 CUROPENBRAC object CURCLOSEBRAC SEMICOLON

    EQUAL  shift, and go to state 22

    $default  reduce using rule 6 (line)


state 12

   12 line: DOCUWRITE $@2 . OPENPARENT param CLOSEPARENT over

    OPENPARENT  shift, and go to state 23


state 13

    1 parse: SCRIPTYPE lines SLASHSCRIPT .
    2      | SCRIPTYPE lines SLASHSCRIPT . NEWLINE

    NEWLINE  shift, and go to state 24

    $default  reduce using rule 1 (parse)


state 14

    3 lines: line lines .

    $default  reduce using rule 3 (lines)


state 15

   26 exp3: ID .

    $default  reduce using rule 26 (exp3)


state 16

   23 exp2: QQUO .

    $default  reduce using rule 23 (exp2)


state 17

   25 exp3: NUM .

    $default  reduce using rule 25 (exp3)


state 18

   24 exp3: OPENPARENT . exps CLOSEPARENT

    ID          shift, and go to state 15
    QQUO        shift, and go to state 16
    NUM         shift, and go to state 17
    OPENPARENT  shift, and go to state 18

    exp2  go to state 19
    exp3  go to state 20
    exps  go to state 25


state 19

   20 exp2: exp2 . TIME exp3
   21     | exp2 . DIVIDE exp3
   29 exps: exp2 .

    TIME    shift, and go to state 26
    DIVIDE  shift, and go to state 27

    $default  reduce using rule 29 (exps)


state 20

   22 exp2: exp3 .

    $default  reduce using rule 22 (exp2)


state 21

    9 line: ID EQUAL exps . over
   27 exps: exps . PLUS exp2
   28     | exps . MINUS exp2

    NEWLINE    shift, and go to state 28
    SEMICOLON  shift, and go to state 29
    PLUS       shift, and go to state 30
    MINUS      shift, and go to state 31

    over  go to state 32


state 22

    5 line: VAR ID EQUAL . exps over
    8     | VAR ID EQUAL . $@1 CUROPENBRAC object CURCLOSEBRAC SEMICOLON

    ID          shift, and go to state 15
    QQUO        shift, and go to state 16
    NUM         shift, and go to state 17
    OPENPARENT  shift, and go to state 18

    $default  reduce using rule 7 ($@1)

    $@1   go to state 33
    exp2  go to state 19
    exp3  go to state 20
    exps  go to state 34


state 23

   12 line: DOCUWRITE $@2 OPENPARENT . param CLOSEPARENT over

    ID          shift, and go to state 15
    QQUO        shift, and go to state 16
    NUM         shift, and go to state 17
    OPENPARENT  shift, and go to state 18

    $default  reduce using rule 19 (param)

    param  go to state 35
    exp2   go to state 19
    exp3   go to state 20
    exps   go to state 36


state 24

    2 parse: SCRIPTYPE lines SLASHSCRIPT NEWLINE .

    $default  reduce using rule 2 (parse)


state 25

   24 exp3: OPENPARENT exps . CLOSEPARENT
   27 exps: exps . PLUS exp2
   28     | exps . MINUS exp2

    CLOSEPARENT  shift, and go to state 37
    PLUS         shift, and go to state 30
    MINUS        shift, and go to state 31


state 26

   20 exp2: exp2 TIME . exp3

    ID          shift, and go to state 15
    NUM         shift, and go to state 17
    OPENPARENT  shift, and go to state 18

    exp3  go to state 38


state 27

   21 exp2: exp2 DIVIDE . exp3

    ID          shift, and go to state 15
    NUM         shift, and go to state 17
    OPENPARENT  shift, and go to state 18

    exp3  go to state 39


state 28

   15 over: NEWLINE .

    $default  reduce using rule 15 (over)


state 29

   14 over: SEMICOLON .

    $default  reduce using rule 14 (over)


state 30

   27 exps: exps PLUS . exp2

    ID          shift, and go to state 15
    QQUO        shift, and go to state 16
    NUM         shift, and go to state 17
    OPENPARENT  shift, and go to state 18

    exp2  go to state 40
    exp3  go to state 20


state 31

   28 exps: exps MINUS . exp2

    ID          shift, and go to state 15
    QQUO        shift, and go to state 16
    NUM         shift, and go to state 17
    OPENPARENT  shift, and go to state 18

    exp2  go to state 41
    exp3  go to state 20


state 32

    9 line: ID EQUAL exps over .

    $default  reduce using rule 9 (line)


state 33

    8 line: VAR ID EQUAL $@1 . CUROPENBRAC object CURCLOSEBRAC SEMICOLON

    CUROPENBRAC  shift, and go to state 42


state 34

    5 line: VAR ID EQUAL exps . over
   27 exps: exps . PLUS exp2
   28     | exps . MINUS exp2

    NEWLINE    shift, and go to state 28
    SEMICOLON  shift, and go to state 29
    PLUS       shift, and go to state 30
    MINUS      shift, and go to state 31

    over  go to state 43


state 35

   12 line: DOCUWRITE $@2 OPENPARENT param . CLOSEPARENT over

    CLOSEPARENT  shift, and go to state 44


state 36

   16 param: exps .
   18      | exps . $@3 COMMA param
   27 exps: exps . PLUS exp2
   28     | exps . MINUS exp2

    PLUS   shift, and go to state 30
    MINUS  shift, and go to state 31

    COMMA     reduce using rule 17 ($@3)
    $default  reduce using rule 16 (param)

    $@3  go to state 45


state 37

   24 exp3: OPENPARENT exps CLOSEPARENT .

    $default  reduce using rule 24 (exp3)


state 38

   20 exp2: exp2 TIME exp3 .

    $default  reduce using rule 20 (exp2)


state 39

   21 exp2: exp2 DIVIDE exp3 .

    $default  reduce using rule 21 (exp2)


state 40

   20 exp2: exp2 . TIME exp3
   21     | exp2 . DIVIDE exp3
   27 exps: exps PLUS exp2 .

    TIME    shift, and go to state 26
    DIVIDE  shift, and go to state 27

    $default  reduce using rule 27 (exps)


state 41

   20 exp2: exp2 . TIME exp3
   21     | exp2 . DIVIDE exp3
   28 exps: exps MINUS exp2 .

    TIME    shift, and go to state 26
    DIVIDE  shift, and go to state 27

    $default  reduce using rule 28 (exps)


state 42

    8 line: VAR ID EQUAL $@1 CUROPENBRAC . object CURCLOSEBRAC SEMICOLON

    ID  shift, and go to state 46

    $default  reduce using rule 34 (object)

    object1  go to state 47
    object   go to state 48


state 43

    5 line: VAR ID EQUAL exps over .

    $default  reduce using rule 5 (line)


state 44

   12 line: DOCUWRITE $@2 OPENPARENT param CLOSEPARENT . over

    NEWLINE    shift, and go to state 28
    SEMICOLON  shift, and go to state 29

    over  go to state 49


state 45

   18 param: exps $@3 . COMMA param

    COMMA  shift, and go to state 50


state 46

   30 object1: ID . COLON exps

    COLON  shift, and go to state 51


state 47

   31 object: object1 .

    $default  reduce using rule 31 (object)


state 48

    8 line: VAR ID EQUAL $@1 CUROPENBRAC object . CURCLOSEBRAC SEMICOLON
   32 object: object . COMMA object1
   33       | object . NEWLINE

    NEWLINE       shift, and go to state 52
    COMMA         shift, and go to state 53
    CURCLOSEBRAC  shift, and go to state 54


state 49

   12 line: DOCUWRITE $@2 OPENPARENT param CLOSEPARENT over .

    $default  reduce using rule 12 (line)


state 50

   18 param: exps $@3 COMMA . param

    ID          shift, and go to state 15
    QQUO        shift, and go to state 16
    NUM         shift, and go to state 17
    OPENPARENT  shift, and go to state 18

    $default  reduce using rule 19 (param)

    param  go to state 55
    exp2   go to state 19
    exp3   go to state 20
    exps   go to state 36


state 51

   30 object1: ID COLON . exps

    ID          shift, and go to state 15
    QQUO        shift, and go to state 16
    NUM         shift, and go to state 17
    OPENPARENT  shift, and go to state 18

    exp2  go to state 19
    exp3  go to state 20
    exps  go to state 56


state 52

   33 object: object NEWLINE .

    $default  reduce using rule 33 (object)


state 53

   32 object: object COMMA . object1

    ID  shift, and go to state 46

    object1  go to state 57


state 54

    8 line: VAR ID EQUAL $@1 CUROPENBRAC object CURCLOSEBRAC . SEMICOLON

    SEMICOLON  shift, and go to state 58


state 55

   18 param: exps $@3 COMMA param .

    $default  reduce using rule 18 (param)


state 56

   27 exps: exps . PLUS exp2
   28     | exps . MINUS exp2
   30 object1: ID COLON exps .

    PLUS   shift, and go to state 30
    MINUS  shift, and go to state 31

    $default  reduce using rule 30 (object1)


state 57

   32 object: object COMMA object1 .

    $default  reduce using rule 32 (object)


state 58

    8 line: VAR ID EQUAL $@1 CUROPENBRAC object CURCLOSEBRAC SEMICOLON .

    $default  reduce using rule 8 (line)
